2011-09-03  Karl Berry  <karl@gnu.org>

	* doc/regex.texi (Character Class Operators): Avoid literal ":"
	in index entries.

2011-09-01  Bruno Haible  <bruno@clisp.org>

	strtoimax, strtoumax: Document problem on HP-UX 11.
	* doc/posix-functions/strtoimax.texi: Mention HP-UX 11.11 problem.
	* doc/posix-functions/strtoumax.texi: Likewise.

2011-09-01  Bruno Haible  <bruno@clisp.org>

	strtoumax: Avoid link error on OSF/1 with DTK cc.
	* m4/strtoumax.m4 (gl_FUNC_STRTOUMAX): Always test whether strtoumax is
	defined as a function.
	* modules/strtoumax (Depends-on, configure.ac): Test only whether
	strtoumax is defined, not whether it is declared.

2011-09-01  Bruno Haible  <bruno@clisp.org>

	strtoimax: Avoid link error on OSF/1 with DTK cc.
	* m4/strtoimax.m4 (gl_FUNC_STRTOIMAX): Always test whether strtoimax is
	defined as a function.
	* modules/strtoimax (Depends-on, configure.ac): Test only whether
	strtoimax is defined, not whether it is declared.

2011-09-01  Bruno Haible  <bruno@clisp.org>

	imaxdiv: Avoid link error on OSF/1 with DTK cc.
	* m4/imaxdiv.m4 (gl_FUNC_IMAXDIV): Also test whether imaxdiv is defined
	as a function.
	* modules/imaxdiv (configure.ac): Test whether imaxdiv is defined, not
	whether it is declared.

2011-09-01  Bruno Haible  <bruno@clisp.org>

	imaxabs: Avoid link error on OSF/1 with DTK cc.
	* m4/imaxabs.m4 (gl_FUNC_IMAXABS): Also test whether imaxabs is defined
	as a function.
	* modules/imaxabs (configure.ac): Test whether imaxabs is defined, not
	whether it is declared.

2011-09-01  Bruno Haible  <bruno@clisp.org>

	pthread: Determine $(LIB_PTHREAD) correctly on IRIX 6.5.
	* m4/pthread.m4 (gl_PTHREAD_CHECK): Check for pthread_join, not
	pthread_create.

2011-09-01  Paul Eggert  <eggert@cs.ucla.edu>

	openat: work around AIX 7.1 fstatat issue
	This should fix the problem that was not properly fixed
	in the previous change, dated 2011-08-30.
	* lib/fstatat.c: Include <sys/stat.h> twice, the first with
	__need_system_stat_h defined.