@@ -1,3 +1,15 @@
+2011-09-03  Paul Eggert  <eggert@cs.ucla.edu>
+
+	openat: test for fstatat (AT_FDCWD, ..., 0) bug
+	This tests for another fstatat bug on AIX 7.1:
+	fstatat (AT_FDCWD, ..., 0) does not work.  See
+	<http://lists.gnu.org/archive/html/bug-tar/2011-09/msg00015.html>.
+	* lib/fstatat.c (FSTATAT_AT_FDCWD_0_BROKEN)
+	(LSTAT_FOLLOWS_SLASHED_SYMLINK): Default to 0.
+	(rpl_fstatat): Adjust so that it works around either (or both)
+	bugs if present.
+	* m4/openat.m4 (gl_FUNC_FSTATAT): Test for this fstatat bug.
+
 2011-09-03  Karl Berry  <karl@gnu.org>
 
 	* doc/regex.texi (Character Class Operators): Avoid literal ":"
